<resources>
    <!-- GENERAL-->
    <string name="logo_description">traveLBetter</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Portal</string>
    <!-- API-->
    <string name="google_map_api_key">AIzaSyD9BAhnNb62l_L_Htwtf3uJ1Q-saSoFFtw</string>
    <string name="default_web_client_id">562377295927-26r2kaucq403vbpo01pd5bjq9volo46n.apps.googleusercontent.com</string>

    <!-- FORMS -->
    <string name="sign_up_page">Sign Up Page</string>
    <string name="sign_up_page_title">Welcome to TravelBetter</string>
    <string name="sign_up_page_subtitle">Choose an account type to proceed</string>
    <string name="sign_up_page_driver">Driver</string>
    <string name="sign_up_page_user">User</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Create account</string>
    <string name="user_sign_up">Sign Up</string>
    <string name="driver_sign_up">Sign Up - Driver</string>
    <string name="driver">DRIVER</string>
    <string name="user">USER</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="plate_number">Plate Number</string>
    <string name="route">Route</string>
    <string-array name="route_options">
        <item>Forestry</item>
        <item>Rural</item>
    </string-array>

    <!-- MAPS -->
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="preference_file_key">com.example.portal.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>

    <!-- DRIVER HOME 1-->
    <string name="press_ready_to_start_accepting_passengers">Press \'READY\' to start \n accepting passengers</string>
    <string name="driver_home">HOME</string>
    <string name="ready">READY</string>

    <!-- DRIVER HOME 2 -->
    <string name="_0">0</string>
    <string name="incoming_passengers">Incoming Passengers</string>
    <string name="take_passengers">Take Passengers</string>
    <string name="passengeres_queued_online_n_to_your_vehicle">Passengers queued online \n to your vehicle:</string>
    <string name="passengers_in_petition_0">Passengers in petition: 0</string>

    <!-- ADMIN HOME -->
    <string name="admin_home">HOME</string>
    <string name="map">Map</string>
    <string name="pending">Pending</string>

    <!-- PENDING LISTS -->
    <string name="pending_applications">Pending Applications</string>
    <string name="dashboard">Dashboard\n</string>

    <!-- USER HOME -->
    <string name="routes">ROUTES</string>
    <string name="choose_which_route_you_need">Choose which route you need</string>
    <string name="forestry">Forestry</string>
    <string name="rural">Rural</string>
    <string name="design">design</string>

    <!-- USER HOME 2 -->
    <string name="available_vehicles">Available Vehicles</string>
    <string name="get_a_ride_sign_a_petition">Get a ride, sign a petition</string>
    <string name="petition">Petition</string>


</resources>