<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".user.UserSignUp">

            <TextView
                android:id="@+id/textViewSignUpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/driver_sign_up"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSignUpTitle"
                android:padding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:id="@+id/linearLayoutErrorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:padding="0dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text=""  />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:hint="@string/first_name"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/linearLayoutErrorContainer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextFirstName"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/firstNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:padding="0dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text=""  />
            </LinearLayout>


            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextFirstName"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:hint="@string/last_name"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/linearLayoutErrorContainer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextLastName"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/lastNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:padding="0dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text=""  />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextLastName"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:hint="@string/contact_number"
                android:inputType="phone" />
            <LinearLayout
                android:id="@+id/linearLayoutErrorContainer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextContactNumber"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/contactNumberError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:padding="0dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text=""  />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextContactNumber"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <LinearLayout
                android:id="@+id/linearLayoutErrorContainer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/passwordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:padding="0dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text=""  />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/editTextPassword"
                android:layout_marginBottom="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/selectYourRouteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Please Select your Route"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/editTextRoute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPlateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout"
                android:layout_marginBottom="8dp"
                android:hint="@string/plate_number"
                android:inputType="text" />
            <LinearLayout
                android:id="@+id/linearLayoutErrorContainer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPlateNumber"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/plateNumberError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:padding="0dp"
                    android:textColor="@android:color/holo_red_light"
                    android:text=""  />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPlateNumber"
                android:text="@string/sign_up"
                android:gravity="center" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
