<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".driver.DriverHome2">

    <!-- Logo -->

    <!-- Group 2 -->

    <ImageView
        android:layout_width="581dp"
        android:layout_height="155dp"
        android:src="@drawable/fade_circle"
        android:id="@+id/imageView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="-85dp"
        android:layout_marginEnd="-85dp"
        android:layout_marginTop="-25dp" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="441dp"
        android:layout_height="172dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="-15dp"
        android:layout_marginEnd="-15dp"
        android:layout_marginTop="0dp" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cute_box_background"
        app:layout_constraintBottom_toTopOf="@id/group2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:layout_editor_absoluteX="0dp">
    </FrameLayout>

    <!-- GROUP 2 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group2"
        android:layout_width="374dp"
        android:layout_height="137dp"
        android:layout_margin="16dp"
        android:background="@drawable/group_background"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.658"
        tools:layout_editor_absoluteX="21dp">

        <!-- Text View for petition count -->
        <TextView
            android:id="@+id/petitionCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="Passengers in petition: 0"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Button for taking passengers -->
        <Button
            android:id="@+id/takePassengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/take_passengers"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petitionCount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- GROUP 1 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/group_background"
        app:layout_constraintBottom_toTopOf="@id/group2"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/driverHome2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/passengeres_queued_online_n_to_your_vehicle"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/foreground_only_location_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_location_updates_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/driverHome2" />

        <!-- TextView for incoming passengers -->
        <TextView
            android:id="@+id/incomingPassengersText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/incoming_passengers"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foreground_only_location_button" />

        <!-- TextView for incoming passengers -->
        <TextView
            android:id="@+id/incomingPassengersText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/incomingPassengersText2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <View-->
<!--        android:id="@+id/line"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="2dp"-->
<!--        android:layout_marginTop="128dp"-->
<!--        android:background="@android:color/black"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.48" />-->
</androidx.constraintlayout.widget.ConstraintLayout>
